welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:15: error: ';' expected but 'else' found.
	else x=0;
        ^